--- a/canvas小游戏/pingpang.html
+++ b/canvas小游戏/pingpang.html
@@ -39,6 +39,18 @@ class Ball {
         this.vy += this.ay;
         this.px += this.vx;
         this.py += this.vy;
+
+        if (this.px < this.r) {
+            this.px = this.r;
+        }
+
+        if (this.px > 400 - this.r) {
+            this.px = 400 - this.r;
+        }
+
+        if (this.py < this.r) {
+            this.py = this.r;
+        }
     }
 }
 
