--- a/canvas图表/pie.html
+++ b/canvas图表/pie.html
@@ -91,13 +91,18 @@ function drawSector1(ctx, x, y, r, start, end, color, callback) {
     ctx.fill();
 
     ctx.restore();
-    callback();
+    if (callback) {
+        callback();
+    }
 }
 
 function drawPie(pie) {
     pie.handleData(6);
 
     let accPercent = 0;
+    let start = [];
+    let end = [];
+    let colorArr = [];
     let v = Math.cos;
     r = 0;
     u = Math.PI * 2;
@@ -107,9 +112,11 @@ function drawPie(pie) {
     let index = 0;
     function draw() {
         if (index < pie.data.length) {
+            start.push(accPercent);
+            colorArr.push(color);
             let item = pie.data[index];
             let endPercent = accPercent + item.persent;
-            // drawSector(pie.ctx, 0, 0, 100, accPercent * u, endPercent * u, color);
+            end.push(endPercent);
 
             let accEnd = accPercent;
             let timer = null;
@@ -118,8 +125,11 @@ function drawPie(pie) {
                     accEnd += 0.01;
                     timer = setTimeout(() => {
                         pie.ctx.clearRect(0, 0, 800, 800);
+                        for (let i = 0; i < index; i++) {
+                            drawSector1(pie.ctx, 0, 0, 100, start[i] * u, end[i] * u, colorArr[i]);
+                        }
                         drawSector1(pie.ctx, 0, 0, 100, accPercent * u, accEnd * u, color, drawPieCallback);
-                    }, 10);
+                    }, 1000 / 60);
                 } else {
                     clearTimeout(timer);
                     r -= u / -20;
@@ -132,6 +142,7 @@ function drawPie(pie) {
             drawSector1(pie.ctx, 0, 0, 100, accPercent * u, accEnd * u, color, drawPieCallback);
         }
     }
+    draw();
 }
 window.onload = function () {
     let canvas = document.getElementById('screen');
