--- a/canvas图表/pie.html
+++ b/canvas图表/pie.html
@@ -115,14 +115,20 @@ function drawPie(pie) {
             let accEnd = accPercent; // 动态绘制扇形累加渐变过程变量控制
             function drawPieCallback() {
                 if (accEnd < endPercent) {
-                    accEnd += 0.0001;
+                    if (accEnd < 0.6) {
+                        accEnd += 0.1;
+                    } else if (accEnd >= 0.6 && accEnd < 0.99) {
+                        accEnd += 0.01;
+                    } else if (accEnd >= 0.99 && accEnd < 1) {
+                        accEnd += 0.001;
+                    }
                     timer = setTimeout(() => {
                         pie.ctx.clearRect(-400, -400, 800, 800);
                         for (let i = 0; i < index; i++) {
                             drawSector1(pie.ctx, 0, 0, 200, start[i] * u, end[i] * u, colorArr[i]);
                         }
                         drawSector1(pie.ctx, 0, 0, 200, accPercent * u, accEnd * u, colorArr[index], drawPieCallback);
-                    }, 0);
+                    }, 1000 / 60);
                 } else {
                     clearTimeout(timer);
                     accPercent = endPercent;
@@ -139,16 +145,13 @@ window.onload = function () {
     let canvas = document.getElementById('screen');
     canvas.width = 800;
     canvas.height = 800;
-    let data = [{
-        name: '西瓜',
-        value: 130
-    }, {
-        name: '菠萝',
-        value: 130
-    }, {
-        name: '香蕉',
-        value: 130
-    }];
+    let data = [
+        { value: 335, name: '直接访问' },
+        { value: 310, name: '邮件营销' },
+        { value: 234, name: '联盟广告' },
+        { value: 135, name: '视频广告' },
+        { value: 1548, name: '搜索引擎' }
+    ];
     let pie = new Pie(canvas, {
         type: 'pie',
         data: data
